# lab05homework

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
lab05/: CMakeLists.txt
lab05/tests/: test1.cpp
tests/: test1.cpp
